--- a/_posts/2023-08-13-blog-post-2.md
+++ b/_posts/2023-08-13-blog-post-2.md
@@ -14,9 +14,9 @@ tags:
 
 
 ------
-Let’s start this blog with a task. We have to train a model which concatenates the last letters of 2 input words. For eg if the input words are ‘Elon’ and ‘Musk’, the model should return ‘nk’. If we use supervised learning to train said model, we will need many examples containing variations of words with different end letters to create a model which gives the correct output. One might argue that we can use few shot learning with LLMs like GPT-3 to solve this problem. However, the model still isn’t able to produce the right output. 
+Let’s start this blog with a task. We have to train a model which concatenates the last letters of 2 input words. For example, if the input words are ‘Elon’ and ‘Musk’, the model should return ‘nk’. If we use supervised learning to train said model, we will need many examples with variation of words containing different end letters to create a model which gives the correct output. One might argue that we can use few shot learning with LLMs like GPT-3 to solve this problem. However, the model still isn’t able to produce the right output. 
 
-This brings us to a turning point wherein we want these large language models to use few shot examples but solve tasks correctly. Humans typically learn from few examples and solve new problems using reasoning. Typically, these skills are picked up in early stages of development through illustrations and a whole lot of examples. Perhaps then the solution is to teach LLMs to reason more like children - with carefully chosen training data to develop the capacity for logic and deduction.
+This brings us to a turning point wherein we want large language models to use few shot examples but solve tasks correctly. Humans typically learn from few examples and solve new problems using reasoning. Typically, these skills are picked up in early stages of development through illustrations and a whole lot of examples. Perhaps then the solution is to teach LLMs to reason more like children - with carefully chosen training data to develop the capacity for logic and deduction.
 
 ## Defining reasoning
 
@@ -27,8 +27,9 @@ Reasoning revolves around finding a logical and systematic method of doing some 
 Let’s deep dive into some of the methods which adopt this idea to improve and elicit reasoning in large language models.
 
 ## Fully supervised finetuning
-These methods are typically employed for small language models to generate rationales that explain model predictions using a rationale/reasoning dataset. For eg Hendrycks [[1]](https://datasets-benchmarks-proceedings.neurips.cc/paper/2021/file/be83ab3ecd0db773eb2dc1b0a17836a1-Paper-round2.pdf)]finetuned pretrained language models to solve math problems by generating the step-by-step solutions.
-- However, this method requires an explicit dataset which contains the reasoning steps and is tuned to a specific dataset, restricting generalization
+These methods are typically employed for small language models to generate rationales that explain model predictions using a rationale/reasoning dataset. For eg Hendrycks [[1]](https://datasets-benchmarks-proceedings.neurips.cc/paper/2021/file/be83ab3ecd0db773eb2dc1b0a17836a1-Paper-round2.pdf)] finetuned pretrained language models to solve math problems by generating the step-by-step solutions.
+
+However, this method requires an explicit dataset which contains the reasoning steps and is tuned to a specific dataset, restricting generalization.
 
 ## Reasoning through prompting:
 
@@ -36,22 +37,22 @@ These methods are typically employed for small language models to generate ratio
 
  ![CoT](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/cot.png)
  
- The basic structure of the prompt for CoT is <input, chain of thought, output instead of the standard <input, output> prompt used in few shot learning. Since few shot examples are used to guide the model to generate intermediate reasoning steps, it does not require a large dataset or modification of the model’s weights.
+ The basic structure of the prompt for CoT is `<input, chain of thought, output>` instead of the standard `<input, output>` prompt used in few shot learning. Since few shot examples are used to guide the model to generate intermediate reasoning steps, it does not require a large dataset or modification of the model’s weights.
 
- ### Zero shot CoT:
+### Zero shot CoT:
 
-One problem with the few shot CoT is that we will need an initial dataset which consists of reasoning steps for different types of reasoning tasks. Kojima [[3]](https://arxiv.org/abs/2205.11916) proposes a method to perform zero -shot CoT by using the instructions like “Let’s think step by step” to prompt the model to generate the reasoning chains on its own
+One problem with few shot CoT is that we will need an initial dataset which consists of reasoning steps for different types of reasoning tasks. Kojima [[3]](https://arxiv.org/abs/2205.11916) proposes a method to perform zero -shot CoT by using instructions like “Let’s think step by step” to prompt the model to generate the reasoning chains on its own.
 
  ![zero-CoT](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/zero-cot.png)
  
 ### Reasoning through Code generation:
-Some LLMs trained on code like Codex [[4]](https://arxiv.org/abs/2210.07128) [[5]](https://arxiv.org/abs/2211.12588) are able to achieve better performance on reasoning tasks using CoT by framing reasoning as a code generation problem
+Some LLMs trained on code like Codex [[4]](https://arxiv.org/abs/2210.07128) [[5]](https://arxiv.org/abs/2211.12588) are able to achieve better performance on reasoning tasks using CoT by framing reasoning as a code generation problem.
 
  ![code-CoT](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/code-cot.png)
 
 ## Rationale Exploration
-Chain of thought prompting follows a very greedy decoding strategy. But complex reasoning tasks typically have multiple reasoning paths, however diverse, can reach the right answer.
-Wang [[6]](https://arxiv.org/abs/2203.11171) proposes self-consistency, which samples the language model’s decoder to generate a diverse set of reasoning paths by introducing an additional latent variable $`r_i`$ representing the sequence of tokens in the reasoning path. This path leads to a final answer $`a_i`$. Multiple such $`(r_i, a_i)`$ are sampled and a marginalization is applied over $r_i$ by taking a majority vote over $`a_i`$, giving the most consistent answer
+Chain of thought prompting follows a very greedy decoding strategy. But complex reasoning tasks typically have multiple reasoning paths and can reach the right answer, however diverse their arguments.
+Wang [[6]](https://arxiv.org/abs/2203.11171) proposes self-consistency, which samples the language model’s decoder to generate a diverse set of reasoning paths by introducing an additional latent variable $r_i$, representing the sequence of tokens in the reasoning path. This path leads to a final answer $a_i$. Multiple such $(r_i, a_i)$ are sampled and a marginalization is applied over $r_i$ by taking a majority vote over $a_i$, giving the most consistent answer.
 
 
  ![self-consistency](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/self-consistency.png)
@@ -60,16 +61,16 @@ CoT with self-consistency is a very powerful strategy to elicit reasoning in com
 
 ## Problem Decomposition
 
-CoT as a standalong prompting procedure can still struggle with reasoning tasks which involve multi-hop chains. Like humans, LLMs can perform better at complex problems using problem decomposition
+CoT as a standalone prompting procedure can still struggle with reasoning tasks which involve multi-hop chains. Like humans, LLMs can perform better at complex problems using problem decomposition.
 
-### Least to most prompting**
-This method [[7]](https://arxiv.org/abs/2205.10625) decomposes the base problems into multiple subproblems and applies CoT individually to it, solving subproblems in a particular order
+### Least to most prompting
+This method [[7]](https://arxiv.org/abs/2205.10625) decomposes the base problems into multiple subproblems and applies CoT individually to it, solving subproblems in a particular order.
 
  ![least-to-most](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/least-to-most.png)
 
 
 ## Discussion and thoughts
-Reasoning seems to be an emergent ability of LLMs, scaling well as the parameter size of the LLM increases [[2]](https://openreview.net/pdf?id=yzkSU5zdwD). Moreover, ‘spoon-feeding’ the model with sample or instruction enabled reasoning chains using CoT elicits reasoning in LLMs. This shows that LLMs present very human-like conditioning when it comes to dealing with reasoning tasks, which can open directions of research to apply other human-like methods.
+Reasoning seems to be an emergent ability of LLMs, scaling well as the parameter size of the LLM increases [[2]](https://openreview.net/pdf?id=yzkSU5zdwD). Moreover, ‘spoon-feeding’ the model with sample or instruction enabled reasoning chains using CoT elicits reasoning in LLMs. This shows that LLMs present very human-like conditioning when it comes to dealing with reasoning tasks, which can open directions of research to apply other human-like methods for reasoning.
 
  ![least-to-most](https://AakankshaSanctis.github.io/images/reasoning_in_LLMs/emergent_LLM.png)
 While significant progress is made in ‘eliciting’ reasoning in LLMs, it  might be more helpful to understand how the emergent ability to reason in LLMs appears and what is the extent of this ability. Until then, happing prompting!
