--- a/_posts/2023-08-24-blog-post-3.md
+++ b/_posts/2023-08-24-blog-post-3.md
@@ -36,15 +36,15 @@ Similar to machine translation, our two languages are high quality instructions 
 
 ![humpack](https://AakankshaSanctis.github.io/images/self-alignment/humpback.png)
 
-Once we have these requirements, we follow these two steps:
+Once we have the requirements, we follow these two steps:
 ### Self augmentation:
 - Generate instructions for unlabelled data, i.e. the web corpus, to produce candidate training data of (instruction, output) pairs for instruction tuning.
-- Create a model $M : p(x\|y)$ where $x$ is the instruction and $y$ is the text output.
+- Create a model $M : p(x\|y)$, where $x$ is the instruction and $y$ is the text output.
 - Unlabelled dataset can generate $\hat{x}$ using $M : A {(\hat{x}, y)}$, the augmented dataset.
 ### Self curation:
 - Self-select high quality demonstration examples as training data to finetune
-        the base model to follow instructions
-- Start with a instruction tuned model $M_0$, following seed instruction set.
+        the base model to follow instructions.
+- Start with an instruction tuned model $M_0$, following seed instruction set.
 - Predict a quality score $a_i$ (use prompting to rate quality with score 1-5) for the augmented examples. Keep a threshold, and filter out top k generations
 - These filtered examples are used to iteratively tune model Mi with $A_k^{(i-1)}$ augmented set
 
@@ -54,7 +54,7 @@ These two steps are iteratively run till we get the desired outputs like backtra
 Observations
 ------
 
-Augmented data tends to have longer outputs but higher quality instruction tend to be closer to the length of the original seed data instructions. Augmented data increases the task diversity as compared to the seed data instructions
+Augmented instructions tends to have longer lengths but higher quality instructions tend to be closer in length to the original seed data instructions. Augmented data increases the task diversity as compared to the seed data instructions
 
 ![diversity](https://AakankshaSanctis.github.io/images/self-alignment/diversity.png)
 
@@ -62,7 +62,7 @@ A seed set is very important to help self-curation of high quality instructions.
 
 ![seed](https://AakankshaSanctis.github.io/images/self-alignment/seed_effect.png)
 
-AlpacaEval [[4]](https://tatsu-lab.github.io/alpaca_eval/) measures the comparison between two models using a metric called pairwise win rate using GPT-4. The win rate quantifies the number of times a model produces a satisfactory output on a task. Self-augmentation and self-curation (Humpback) outperforms non-distilled models by a large margin, while it performs similarly to distilled or proprietary. With human evaluation, annotators mostly prefer Humpback generations
+AlpacaEval [[4]](https://tatsu-lab.github.io/alpaca_eval/) measures the comparison between two models using a metric called pairwise win rate using GPT-4. The win rate quantifies the number of times a model produces a satisfactory output on a task. Self-augmentation and self-curation (Humpback) outperforms non-distilled models by a large margin, while it performs similarly to distilled or proprietary models. With human evaluation, annotators mostly prefer Humpback generations.
 
 ![quality](https://AakankshaSanctis.github.io/images/self-alignment/generation_quality.png)
 
