--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -9,7 +9,7 @@ tags:
 
 Large language models like GPT-3 can be prompted with in-context examples or instructions to complete tasks without fine-tuning the model's parameters. Prompting allows handling open-ended queries without introducing large numbers of learnable parameters. However, manually crafting a successful prompt to maximize the likelihood of the desired output is challenging (Hard prompts). For specific downstream tasks, domain adaptation may be required. This motivates soft prompts - appending tunable vectors to the input to steer the model toward desired outputs. Soft prompts help handle low-data domains and improve generalization without exhaustive prompt engineering.
 
-![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%201.png)
+![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%201.png){width=50%}
 
 Language model architectures have now been successfully applied to the visual modality, such as in Vision Transformers (ViT) and CLIP models. An intriguing question is whether the idea of soft prompting for language models can also be applied in the visual domain for adaptation. The answer is yes – there are several promising ways to implement soft visual prompts. In this post, we will review different techniques for adapting vision models using soft prompting.
 
@@ -25,7 +25,7 @@ While the same methods which we will discuss below can be applied to vision-only
 
 CLIP (Contrastive Language-Image Pretraining)[[1]]([https://arxiv.org/abs/2103.00020](https://arxiv.org/abs/2103.00020)) combines corresponding visual and language information by aligning encoders for each modality using a contrastive loss. This brings the visual and language features closer together in the embedding space if they represent the same underlying concept. Specifically, the contrastive loss maximizes similarity between aligned vision-language pairs while minimizing similarity for mismatched pairs. This aligns the vision and language encoders to output high similarity embeddings for corresponding visual and textual inputs about the same object.
 
-![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%202.png)
+![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%202.png){width=50%}
 
 To leverage CLIP's zero-shot capabilities for image classification, we can use a template like "This is a photo of [CLASS]" on the text side. The class name prompts are passed to the language encoder, while images are fed to the vision encoder. CLIP then predicts the class whose textual prompt embedding has the highest similarity to the image embedding. The original CLIP authors engineered about 80 prompts [[2]]([https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb](https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb)) for each class to maximize performance, demonstrating the impact of prompt engineering for zero-shot CLIP.
 
@@ -33,7 +33,7 @@ To leverage CLIP's zero-shot capabilities for image classification, we can use a
 
 We can use the notion of a soft prompt for vision-language models too. For models like CLIP, using the right template for the prompt affects the results considerably. Therefore, if we append tunable parameters to the language input of CLIP, we can get better domain adaptation.
 
-![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%203.png)
+![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%203.png){width=50%}
 
 CoOp [[3]]([https://arxiv.org/pdf/2109.01134.pdf](https://arxiv.org/pdf/2109.01134.pdf)) precisely uses this concept where it uses a tunable prompt ($t_i$) to the language encoder ($g$) to maximize the probability of the target class given the tunable prompt. The image encoder ($f$) is kept frozen in this process. The resultant optimization is:
 
@@ -99,7 +99,7 @@ Each task is defined by constructing a grid like image that contains an input-ou
 Some interesting applications
 ------
 
-This section deserves a post of its own, but I’m providing a summary here so that you can become aware of the possible scenarios to use these visual prompts.
+This section deserves a post of its own, but I’m providing a summary here so that you can be aware of the possible scenarios to use these visual prompts.
 
 ### Flamingo
 
