--- a/_posts/2023-09-04-blog-post-4.md
+++ b/_posts/2023-09-04-blog-post-4.md
@@ -25,14 +25,14 @@ While the same methods which we will discuss below can be applied to vision-only
 
 ### Zero-shot prompting
 
-CLIP (Contrastive Language-Image Pretraining)[[1]]([https://arxiv.org/abs/2103.00020](https://arxiv.org/abs/2103.00020)) combines corresponding visual and language information by aligning encoders for each modality using a contrastive loss. This brings the visual and language features closer together in the embedding space if they represent the same underlying concept. Specifically, the contrastive loss maximizes similarity between aligned vision-language pairs while minimizing similarity for mismatched pairs. This aligns the vision and language encoders to output high similarity embeddings for corresponding visual and textual inputs about the same object.
+CLIP (Contrastive Language-Image Pretraining)[[1]](https://arxiv.org/abs/2103.00020) combines corresponding visual and language information by aligning encoders for each modality using a contrastive loss. This brings the visual and language features closer together in the embedding space if they represent the same underlying concept. Specifically, the contrastive loss maximizes similarity between aligned vision-language pairs while minimizing similarity for mismatched pairs. This aligns the vision and language encoders to output high similarity embeddings for corresponding visual and textual inputs about the same object.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%202.png){width=50%} -->
 <p align="center">
 <img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%202.png" width="70%" height="70%">
 </p>
 
-To leverage CLIP's zero-shot capabilities for image classification, we can use a template like "This is a photo of [CLASS]" on the text side. The class name prompts are passed to the language encoder, while images are fed to the vision encoder. CLIP then predicts the class whose textual prompt embedding has the highest similarity to the image embedding. The original CLIP authors engineered about 80 prompts [[2]]([https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb](https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb)) for each class to maximize performance, demonstrating the impact of prompt engineering for zero-shot CLIP.
+To leverage CLIP's zero-shot capabilities for image classification, we can use a template like "This is a photo of [CLASS]" on the text side. The class name prompts are passed to the language encoder, while images are fed to the vision encoder. CLIP then predicts the class whose textual prompt embedding has the highest similarity to the image embedding. The original CLIP authors engineered about 80 prompts [[2]](https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb) for each class to maximize performance, demonstrating the impact of prompt engineering for zero-shot CLIP.
 
 ### Prompting language side of vision-language models
 
@@ -43,14 +43,14 @@ We can use the notion of a soft prompt for vision-language models too. For model
 <img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%203.png" width="70%" height="70%">
 </p>
 
-CoOp [[3]]([https://arxiv.org/pdf/2109.01134.pdf](https://arxiv.org/pdf/2109.01134.pdf)) precisely uses this concept where it uses a tunable prompt ($t_i$) to the language encoder ($g$) to maximize the probability of the target class given the tunable prompt. The image encoder ($f$) is kept frozen in this process. The resultant optimization is:
+CoOp [[3]](https://arxiv.org/pdf/2109.01134.pdf) precisely uses this concept where it uses a tunable prompt ($t_i$) to the language encoder ($g$) to maximize the probability of the target class given the tunable prompt. The image encoder ($f$) is kept frozen in this process. The resultant optimization is:
 
 $$ 
 \max  p({y = i}|x) = \frac{exp(cos(g(t_i), f)/ \tau)} {\sum_{j=1}^{K} exp(cos(g(t_j), f)/\tau)}
 $$ 
 
 
-To make this model more generalizable to unseen classes, the authors (CoCoOp) [[4]]([https://arxiv.org/pdf/2203.05557.pdf](https://arxiv.org/pdf/2203.05557.pdf)) condition the tunable language parameters ($v_i$) to the image features (f) by learning a mini-network ($h_{\theta}(x)$). The output from this network is then appended to the language input such that:
+To make this model more generalizable to unseen classes, the authors (CoCoOp) [[4]](https://arxiv.org/pdf/2203.05557.pdf) condition the tunable language parameters ($v_i$) to the image features (f) by learning a mini-network ($h_{\theta}(x)$). The output from this network is then appended to the language input such that:
 
 $$
 t_i(x) = {v_1(x), v_2(x) … v_m(x)}
@@ -67,14 +67,14 @@ $$
 
 ### Prompting visual side of vision-language models
 
-Elsayed [[5]]([https://arxiv.org/pdf/1806.11146.pdf](https://arxiv.org/pdf/1806.11146.pdf)) first introduced the concept of adversarial reprogramming to reprogram the target model to perform a task chosen by the attacker. This was executed by tuning a learnable window around the input image, the weights of this window were updated according to the target classes of the attacker’s choice.
+Elsayed [[5]](https://arxiv.org/pdf/1806.11146.pdf) first introduced the concept of adversarial reprogramming to reprogram the target model to perform a task chosen by the attacker. This was executed by tuning a learnable window around the input image, the weights of this window were updated according to the target classes of the attacker’s choice.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%205.png) -->
 <p align="center">
 <img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%205.png" width="70%" height="70%">
 </p>
 
-The same method can be used to adapt a pretrained image classifier or a vision-language model to adapt to a new domain with different classes. The learnable window is essentially a soft prompt which can be appended with the image input to a model like CLIP [[6]]([https://arxiv.org/pdf/2203.17274.pdf](https://arxiv.org/pdf/2203.17274.pdf)). Inference on new tasks can be performed by just changing the ‘visual prompt’ for the desired learned task.
+The same method can be used to adapt a pretrained image classifier or a vision-language model to adapt to a new domain with different classes. The learnable window is essentially a soft prompt which can be appended with the image input to a model like CLIP [[6]](https://arxiv.org/pdf/2203.17274.pdf). Inference on new tasks can be performed by just changing the ‘visual prompt’ for the desired learned task.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%206.png) -->
 <p align="center">
@@ -87,7 +87,7 @@ $$
 \max_{\theta} P(y|{x + v_{\theta}})
 $$
 
-You can also increase the granularity of the soft prompt, and add multiple visual prompts in the embedding space of the image encoder as well [[7]]([https://arxiv.org/pdf/2203.12119.pdf](https://arxiv.org/pdf/2203.12119.pdf)). Depending on how many prompts you apply, the networks can be shallow or deep
+You can also increase the granularity of the soft prompt, and add multiple visual prompts in the embedding space of the image encoder as well [[7]](https://arxiv.org/pdf/2203.12119.pdf). Depending on how many prompts you apply, the networks can be shallow or deep
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%207.png) -->
 <p align="center">
@@ -96,14 +96,14 @@ You can also increase the granularity of the soft prompt, and add multiple visua
 
 ### Prompting both sides of vision-language models
 
-Unimodal prompt tuning methods don’t perform consistently well, which maybe be due to some misalignment in prompts when modalities are learned independently. Unified prompt Tuning (UPT) [[8]]([https://arxiv.org/pdf/2210.07225.pdf](https://arxiv.org/pdf/2210.07225.pdf)) introduces both text and visual prompts to the model and jointly optimizes both modalities simultaneously.
+Unimodal prompt tuning methods don’t perform consistently well, which maybe be due to some misalignment in prompts when modalities are learned independently. Unified prompt Tuning (UPT) [[8]](https://arxiv.org/pdf/2210.07225.pdf) introduces both text and visual prompts to the model and jointly optimizes both modalities simultaneously.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%208.png) -->
 <p align="center">
 <img src="https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%208.png" width="70%" height="70%">
 </p>
 
-UPT starts with an initial prompt and uses a lightweight self-attention network to generate the prompt for CLIP’s text and visual encoders. The design of the soft prompt is similar to CoOp [[3]]([https://arxiv.org/pdf/2109.01134.pdf](https://arxiv.org/pdf/2109.01134.pdf)) and VPT [[7]]([https://arxiv.org/pdf/2203.12119.pdf](https://arxiv.org/pdf/2203.12119.pdf)) which embeds prompts in the embedding space of the text and image encoder.
+UPT starts with an initial prompt and uses a lightweight self-attention network to generate the prompt for CLIP’s text and visual encoders. The design of the soft prompt is similar to CoOp [[3]](https://arxiv.org/pdf/2109.01134.pdf) and VPT [[7]](https://arxiv.org/pdf/2203.12119.pdf) which embeds prompts in the embedding space of the text and image encoder.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%209.png) -->
 <p align="center">
@@ -112,7 +112,7 @@ UPT starts with an initial prompt and uses a lightweight self-attention network 
 
 ### In-context-learning for vision models
 
-Language models can learn new tasks through few-shot learning, where the prompt contains a few example exemplars. Inspired by the same concept,[[9]]([https://arxiv.org/pdf/2209.00647.pdf](https://arxiv.org/pdf/2209.00647.pdf)) introduces a new type of visual prompting, where in given an example of a new task and new image, the model produces the desired output image via inpainting. For ex, if the examples consist of images which demonstrate a masking task, the pretrained model can adapt to create a mask for a new image at test time.
+Language models can learn new tasks through few-shot learning, where the prompt contains a few example exemplars. Inspired by the same concept,[[9]](https://arxiv.org/pdf/2209.00647.pdf) introduces a new type of visual prompting, where in given an example of a new task and new image, the model produces the desired output image via inpainting. For ex, if the examples consist of images which demonstrate a masking task, the pretrained model can adapt to create a mask for a new image at test time.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2010.png) -->
 <p align="center">
@@ -135,7 +135,7 @@ This section deserves a post of its own, but I’m providing a summary here so t
 
 ### Flamingo
 
-This family of vision-language models [[10]]([https://arxiv.org/pdf/2204.14198.pdf](https://arxiv.org/pdf/2204.14198.pdf)) joins vision-only and language-only models which are capable of handling interleaved sequences of visual and textual data and can ingest images or videos as input.
+This family of vision-language models [[10]](https://arxiv.org/pdf/2204.14198.pdf) joins vision-only and language-only models which are capable of handling interleaved sequences of visual and textual data and can ingest images or videos as input.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2012.png) -->
 <p align="center">
@@ -144,7 +144,7 @@ This family of vision-language models [[10]]([https://arxiv.org/pdf/2204.14198.p
 
 ### Otter
 
-Instruction tuning is used to gain better zero shot performance from language models using models such as InstructGPT and FLAN. Otter [[11]]([https://arxiv.org/pdf/2305.03726.pdf](https://arxiv.org/pdf/2305.03726.pdf)) is a multi-modal model which instruction tunes Flamingo described above to make multi-modal models instruction following and improve in-context learning
+Instruction tuning is used to gain better zero shot performance from language models using models such as InstructGPT and FLAN. Otter [[11]](https://arxiv.org/pdf/2305.03726.pdf) is a multi-modal model which instruction tunes Flamingo described above to make multi-modal models instruction following and improve in-context learning
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2013.png) -->
 <p align="center">
@@ -153,7 +153,7 @@ Instruction tuning is used to gain better zero shot performance from language mo
 
 ### Segment Anything
 
-Segment Anything [[12]]([https://arxiv.org/pdf/2304.02643.pdf](https://arxiv.org/pdf/2304.02643.pdf)) builds a foundation model for segmentation task which is promptable, making it zero-shot transferable to new image distributions. The promptable segmentation task is to return a valid segmentation mask given any prompt. Flexible prompts such as points, bounding box, masks and texts can be used.
+Segment Anything [[12]](https://arxiv.org/pdf/2304.02643.pdf) builds a foundation model for segmentation task which is promptable, making it zero-shot transferable to new image distributions. The promptable segmentation task is to return a valid segmentation mask given any prompt. Flexible prompts such as points, bounding box, masks and texts can be used.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2014.png) -->
 <p align="center">
@@ -162,7 +162,7 @@ Segment Anything [[12]]([https://arxiv.org/pdf/2304.02643.pdf](https://arxiv.org
 
 ### Visual Prompting by Landing AI
 
-Landing AI launched a product called Visual prompting [[13]]([https://landing.ai/blog/what-is-visual-prompting/](https://landing.ai/blog/what-is-visual-prompting/)) which can build deployable computer vision models in a few hours by labelling a few areas of the target object even with small datasets. This is similar to the incontext-learning for visual prompting like the inpainting task we discussed previously.
+Landing AI launched a product called Visual prompting [[13]](https://landing.ai/blog/what-is-visual-prompting/) which can build deployable computer vision models in a few hours by labelling a few areas of the target object even with small datasets. This is similar to the incontext-learning for visual prompting like the inpainting task we discussed previously.
 
 <!-- ![Untitled](https://AakankshaSanctis.github.io/images/visual_prompting/Untitled%2015.png) -->
 <p align="center">
